# numalz

./: CMakeLists.txt  Interop.h  LinearAlgebra.h  Matrix.h  Solver.h
module_test/: interop_test.cpp  matrix_test.cpp  opencv_test.cpp  q_2_1.cpp  q_2_2.cpp  solver_test.cpp
